--- a/.github/workflows/publish-pdfs.yml
+++ b/.github/workflows/publish-pdfs.yml
@@ -28,11 +28,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+          # Do not enable npm caching when no lockfile is present
 
       - name: Install dependencies
         run: |
-          npm ci || npm i
+          npm i
 
       - name: Install Playwright Chromium deps
         run: |
@@ -48,6 +48,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: dist-pdf
           publish_branch: pdfs
+          force_orphan: true
           commit_message: 'chore: update exported PDFs [skip ci]'
           user_name: github-actions[bot]
           user_email: 41898282+github-actions[bot]@users.noreply.github.com
