add html advanced and fix ci

--- a/.github/workflows/publish-pdfs.yml
+++ b/.github/workflows/publish-pdfs.yml
@@ -14,10 +14,12 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-publish:
+  build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
+      pages: write
+      id-token: write
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -42,15 +44,16 @@ jobs:
         run: |
           node scripts/export-pdfs.mjs
 
-      - name: Publish to pdfs branch
-        uses: peaceiris/actions-gh-pages@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist-pdf
-          publish_branch: pdfs
-          force_orphan: true
-          commit_message: 'chore: update exported PDFs [skip ci]'
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          path: dist-pdf
+
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
 
 
