--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@slidev/types": "^52.2.4"
   },
   "devDependencies": {
-    "@slidev/cli": "^52.2.4"
+    "@slidev/cli": "^52.2.4",
+    "playwright-chromium": "^1.47.0"
   },
   "//": "Learn more: https://sli.dev/guide/write-theme.html",
   "slidev": {
